--- a/aset-digital/free/admin-boundaries.html
+++ b/aset-digital/free/admin-boundaries.html
@@ -16,99 +16,25 @@
     <link rel="stylesheet" href="../../css/main.css" />
 
     <style>
-      /* --- HERO SECTION --- */
-      .hero-boundaries {
-        padding: 180px 0 100px;
-        background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
-        text-align: center;
-        border-bottom: 1px solid var(--border);
-      }
+      .hero-boundaries { padding: 180px 0 100px; background: linear-gradient(to bottom, #f8fafc, #f1f5f9); text-align: center; border-bottom: 1px solid var(--border); }
+      .download-card { background: white; border: 1px solid var(--border); border-radius: 32px; padding: 60px; box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05); margin: -60px auto 100px; max-width: 1100px; }
+      
+      /* Typography & Content Styling */
+      .level-section { margin-bottom: 80px; text-align: left; }
+      .level-section h3 { font-size: 1.8rem; color: var(--primary); margin-bottom: 15px; border-left: 5px solid var(--accent); padding-left: 15px; }
+      .narrative-text { font-size: 1.05rem; line-height: 1.8; color: var(--text-muted); margin-bottom: 30px; text-align: justify; }
 
-      /* --- DOWNLOAD CARD --- */
-      .download-card {
-        background: white;
-        border: 1px solid var(--border);
-        border-radius: 32px;
-        padding: 60px;
-        box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05);
-        margin: -60px auto 100px;
-        max-width: 1100px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
+      /* Dual Preview Grid (Map & Attribute) */
+      .dual-preview { display: grid; grid-template-columns: 1.5fr 1fr; gap: 20px; margin-bottom: 30px; }
+      .preview-box { background: white; border: 1px solid var(--border); border-radius: 16px; overflow: hidden; }
+      .preview-box label { display: block; background: var(--bg-light); padding: 10px; font-weight: 800; font-size: 0.8rem; text-align: center; border-bottom: 1px solid var(--border); color: var(--primary); }
+      .img-container { height: 220px; display: flex; align-items: center; justify-content: center; padding: 10px; }
+      .img-container img { max-width: 100%; max-height: 100%; object-fit: contain; }
 
-      /* --- PREVIEW GRID & CAPTION --- */
-      .preview-grid {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 25px;
-        width: 100%;
-        margin: 35px 0;
-      }
+      .btn-download-gis { background: var(--primary); color: white !important; padding: 18px; border-radius: 12px; font-weight: 700; text-decoration: none; display: block; width: 100%; max-width: 500px; margin: 10px auto; text-align: center; transition: 0.3s; }
+      .btn-download-gis:hover { background: var(--accent); transform: translateY(-3px); }
 
-      .preview-item {
-        display: flex;
-        flex-direction: column;
-        gap: 12px;
-      }
-
-      .map-frame {
-        height: 200px;
-        background: white;
-        border: 1px solid var(--border);
-        border-radius: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 15px;
-        overflow: hidden;
-        transition: 0.3s ease;
-      }
-
-      .map-frame:hover {
-        border-color: var(--accent);
-        box-shadow: 0 10px 20px rgba(0,0,0,0.03);
-      }
-
-      .map-frame img {
-        max-width: 100%;
-        max-height: 100%;
-        object-fit: contain;
-      }
-
-      .map-label {
-        font-size: 0.9rem;
-        font-weight: 700;
-        color: var(--primary);
-        text-align: center;
-      }
-
-      /* --- BUTTONS --- */
-      .btn-download-gis {
-        background: var(--primary);
-        color: white !important;
-        padding: 18px;
-        border-radius: 12px;
-        font-weight: 700;
-        text-decoration: none;
-        display: block;
-        width: 100%;
-        max-width: 500px;
-        margin-bottom: 12px;
-        text-align: center;
-        transition: 0.3s;
-      }
-
-      .btn-download-gis:hover {
-        background: var(--accent);
-        transform: translateY(-3px);
-      }
-
-      @media (max-width: 768px) {
-        .preview-grid { grid-template-columns: 1fr; }
-        .download-card { padding: 40px 20px; }
-      }
+      @media (max-width: 992px) { .dual-preview { grid-template-columns: 1fr; } }
     </style>
   </head>
 
@@ -118,16 +44,9 @@
     <header class="header" id="header">
       <div class="progress-bar" id="progress-bar"></div>
       <div class="container nav-container">
-        <div class="logo">
-          <a href="../../beranda.html">
-            <img src="../../assets/images/logo.png" alt="Lontara Logo" width="120" height="38" />
-          </a>
-        </div>
-
+        <div class="logo"><a href="../../beranda.html"><img src="../../assets/images/logo.png" alt="Lontara Logo" width="120" height="38" /></a></div>
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
-          </button>
+          <button class="nav-close" id="nav-close"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></button>
           <div class="nav-item"><a href="../../layanan/layanan.html">Layanan</a></div>
           <div class="nav-item"><a href="../../portofolio/portofolio.html">Portofolio</a></div>
           <div class="nav-item"><a href="../../artikel/artikel.html">Artikel</a></div>
@@ -136,78 +55,92 @@
           <div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
           <div class="nav-item nav-item-cta"><a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a></div>
         </nav>
-
-        <button class="nav-toggle" id="nav-toggle" aria-label="Buka Menu">
-          <span></span><span></span><span></span>
-        </button>
+        <button class="nav-toggle" id="nav-toggle"><span></span><span></span><span></span></button>
       </div>
     </header>
 
     <main>
       <section class="hero-boundaries">
         <div class="container">
-          <a href="../aset-digital.html" style="background: var(--primary); color: white; padding: 10px 20px; border-radius: 10px; text-decoration: none; font-weight: 800; display: inline-block; margin-bottom: 30px;">
-            ← Kembali ke Aset Digital
-          </a>
-          <h1 style="font-size: 3.2rem; font-weight: 800; color: var(--primary)">Dataset Batas Administrasi</h1>
-          <p style="font-size: 1.2rem; color: var(--text-muted); max-width: 850px; margin: 25px auto 0; line-height: 1.6;">
-            Akses dataset spasial poligon resmi yang bersumber dari <strong>Badan Informasi Geospasial (BIG) tahun 2024</strong>. 
-            Data telah melalui proses validasi topologi (clean) untuk memastikan tidak ada <i>gap</i> atau <i>overlap</i> antar batas wilayah.
+          <a href="../aset-digital.html" style="background: var(--primary); color: white; padding: 10px 20px; border-radius: 10px; text-decoration: none; font-weight: 800; display: inline-block; margin-bottom: 30px;">← Kembali ke Aset Digital</a>
+          <h1 style="font-size: 3rem; font-weight: 800; color: var(--primary)">Dataset Batas Administrasi Indonesia</h1>
+          <p style="font-size: 1.1rem; color: var(--text-muted); max-width: 800px; margin: 20px auto 0;">
+            Data spasial resmi berbasis <strong>BIG TASWIL 2024</strong>. Meskipun bersifat indikatif, dataset ini merupakan acuan vital untuk analisis kewilayahan nasional.
           </p>
         </div>
       </section>
 
       <div class="container">
         <div class="download-card">
-          <h2 style="font-size: 2rem; font-weight: 800; color: var(--primary)">Pratinjau & Unduh</h2>
           
-          <div class="preview-grid">
-            <div class="preview-item">
-              <div class="map-frame"><img src="../images/prov-peta-adm.png" alt="Peta Provinsi" /></div>
-              <p class="map-label">Batas Administrasi Provinsi (Nasional)</p>
+          <div class="level-section">
+            <h3>1. Batas Administrasi Provinsi</h3>
+            <p class="narrative-text">
+              Dataset tingkat pertama ini mencakup seluruh poligon provinsi di Indonesia. Data ini sangat penting untuk analisis skala makro dan koordinasi antar wilayah. 
+              Sumber data berasal dari Pusat Pemetaan Batas Wilayah (PPBW) BIG, divalidasi menggunakan standar <strong>SRGI 2013</strong> untuk presisi spasial nasional yang optimal.
+            </p>
+            <div class="dual-preview">
+              <div class="preview-box"><label>Visual Peta (.png)</label><div class="img-container"><img src="../images/prov-peta-adm.png" alt="Peta Provinsi" /></div></div>
+              <div class="preview-box"><label>Struktur Atribut Data</label><div class="img-container"><img src="../images/prov-atribut-peta.png" alt="Atribut Provinsi" /></div></div>
             </div>
-            <div class="preview-item">
-              <div class="map-frame"><img src="../images/kab-peta-adm.png" alt="Peta Kabupaten" /></div>
-              <p class="map-label">Batas Administrasi Kabupaten/Kota</p>
-            </div>
-            <div class="preview-item">
-              <div class="map-frame"><img src="../images/kec-peta-adm.png" alt="Peta Kecamatan" /></div>
-              <p class="map-label">Batas Administrasi Kecamatan</p>
-            </div>
-            <div class="preview-item">
-              <div class="map-frame"><img src="../images/desa-peta-adm.png" alt="Peta Desa" /></div>
-              <p class="map-label">Batas Administrasi Desa/Kelurahan</p>
-            </div>
+            <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-download-gis">Unduh SHP Provinsi</a>
           </div>
 
-          <div style="width: 100%; max-width: 800px; margin-bottom: 40px; text-align: left;">
-            <h3 style="color: var(--primary); margin-bottom: 15px;">Informasi Teknis:</h3>
-            <ul style="list-style: none; padding: 0; color: var(--text-muted); line-height: 1.8;">
-              <li><strong>• Sumber Data:</strong> Badan Informasi Geospasial (BIG) - TASWIL 2024</li>
-              <li><strong>• Sistem Proyeksi:</strong> WGS 84 (EPSG:4326)</li>
-              <li><strong>• Format File:</strong> ESRI Shapefile (.shp)</li>
-              <li><strong>• Atribut:</strong> Nama Wilayah, Kode Dagri, dan Luas Geometris.</li>
-            </ul>
+          <hr style="opacity: 0.1; margin-bottom: 60px;">
+
+          <div class="level-section">
+            <h3>2. Batas Administrasi Kabupaten & Kota</h3>
+            <p class="narrative-text">
+              Data ini merupakan hasil <i>Geoprocessing Dissolve</i> dari basis data desa nasional untuk mempermudah pengguna dalam analisis tingkat daerah tingkat II. 
+              Sifat batas masih <strong>indikatif</strong> (sementara), namun sangat mumpuni sebagai dasar perbandingan survei lapangan guna menghindari potensi sengketa wilayah.
+            </p>
+            <div class="dual-preview">
+              <div class="preview-box"><label>Visual Peta (.png)</label><div class="img-container"><img src="../images/kab-peta-adm.png" alt="Peta Kabupaten" /></div></div>
+              <div class="preview-box"><label>Struktur Atribut Data</label><div class="img-container"><img src="../images/kab-atribut-peta.png" alt="Atribut Kabupaten" /></div></div>
+            </div>
+            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis">Unduh SHP Kabupaten/Kota</a>
           </div>
 
-          <div style="background: var(--bg-light); border: 2px dashed var(--border); border-radius: 28px; padding: 50px; width: 100%; max-width: 650px; text-align: center;">
-            <span style="font-weight: 800; color: var(--accent); letter-spacing: 2px; text-transform: uppercase; font-size: 0.85rem; display: block; margin-bottom: 25px;">
-              Free Dataset
-            </span>
+          <hr style="opacity: 0.1; margin-bottom: 60px;">
 
-            <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-download-gis">Unduh Data Provinsi (.shp)</a>
-            <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis">Unduh Data Kabupaten (.shp)</a>
-            <a href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view" target="_blank" class="btn-download-gis">Unduh Data Kecamatan (.shp)</a>
-            <a href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view" target="_blank" class="btn-download-gis">Unduh Data Desa (.shp)</a>
-
-            <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 25px;">Update Terakhir: Januari 2024</p>
+          <div class="level-section">
+            <h3>3. Batas Administrasi Kecamatan</h3>
+            <p class="narrative-text">
+              Tingkat kecamatan menjadi jembatan krusial dalam perencanaan tata ruang kota dan kabupaten. Dataset ini menyediakan batas poligon yang telah melalui proses 
+              <strong>Topologi Clean</strong>, memastikan integrasi tanpa celah (gap) antar wilayah administratif di bawahnya.
+            </p>
+            <div class="dual-preview">
+              <div class="preview-box"><label>Visual Peta (.png)</label><div class="img-container"><img src="../images/kec-peta-adm.png" alt="Peta Kecamatan" /></div></div>
+              <div class="preview-box"><label>Struktur Atribut Data</label><div class="img-container"><img src="../images/kec-atribut-peta.png" alt="Atribut Kecamatan" /></div></div>
+            </div>
+            <a href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view" target="_blank" class="btn-download-gis">Unduh SHP Kecamatan</a>
           </div>
+
+          <hr style="opacity: 0.1; margin-bottom: 60px;">
+
+          <div class="level-section">
+            <h3>4. Batas Administrasi Desa & Kelurahan</h3>
+            <p class="narrative-text">
+              Dataset dengan kedetailan tertinggi, bersumber dari integrasi Peta Rupa Bumi Indonesia (RBI). Data tingkat desa ini mencakup informasi Kode Dagri dan 
+              luas geometris yang sangat bermanfaat untuk analisis pemberdayaan ekonomi lokal dan pemetaan potensi desa berbasis GIS.
+            </p>
+            <div class="dual-preview">
+              <div class="preview-box"><label>Visual Peta (.png)</label><div class="img-container"><img src="../images/desa-peta-adm.png" alt="Peta Desa" /></div></div>
+              <div class="preview-box"><label>Struktur Atribut Data</label><div class="img-container"><img src="../images/desa-atribut-peta.png" alt="Atribut Desa" /></div></div>
+            </div>
+            <a href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view" target="_blank" class="btn-download-gis">Unduh SHP Desa/Kelurahan</a>
+          </div>
+
+          <div style="background: var(--bg-light); border: 2px dashed var(--border); border-radius: 24px; padding: 30px; margin-top: 40px; text-align: center;">
+            <p style="font-size: 0.9rem; color: var(--text-muted);"><strong>Metadata Teknis:</strong> SRS ID: SRGI 2013 | Proyeksi: WGS 84 (EPSG:4326) | Format: ESRI Shapefile (.shp)</p>
+          </div>
+
         </div>
       </div>
     </main>
 
     <footer style="padding: 60px 0; text-align: center; border-top: 1px solid var(--border);">
-      <p style="font-size: 0.9rem; color: var(--text-muted)">© 2026 Lontara Studio. Environmental & Land Intelligence.</p>
+      <p style="font-size: 0.9rem; color: var(--text-muted)">© 2026 Lontara Studio. Environmental & Land Intelligence Studio.</p>
     </footer>
 
     <script src="../../js/utils.js"></script>
