--- a/aset-digital/free/admin-boundaries.html
+++ b/aset-digital/free/admin-boundaries.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../../css/main.css" />
 
     <style>
-      /* --- HERO SECTION --- */
+      /* --- HERO SECTION: Standard Lontara --- */
       .hero-boundaries {
         padding: 180px 0 100px;
         background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
@@ -24,7 +24,7 @@
         border-bottom: 1px solid var(--border);
       }
 
-      /* --- DOWNLOAD CARD ARCHITECTURE --- */
+      /* --- DOWNLOAD CARD: Arsitektur Utama --- */
       .download-card {
         background: white;
         border: 1px solid var(--border);
@@ -37,7 +37,7 @@
         flex-direction: column;
       }
 
-      /* Level Section Styling */
+      /* Level Content Styling */
       .level-section { margin-bottom: 80px; }
       .level-section h3 { font-size: 1.8rem; color: var(--primary); margin-bottom: 20px; font-weight: 800; border-left: 6px solid var(--accent); padding-left: 20px; }
       .narrative-text { font-size: 1.05rem; line-height: 1.8; color: var(--text-muted); margin-bottom: 35px; text-align: justify; }
@@ -49,14 +49,13 @@
         gap: 20px;
         margin-bottom: 30px;
       }
-
       .preview-box { background: white; border: 1px solid var(--border); border-radius: 16px; overflow: hidden; }
-      .preview-box label { display: block; background: var(--bg-light); padding: 12px; font-weight: 800; font-size: 0.75rem; text-transform: uppercase; letter-spacing: 1px; text-align: center; border-bottom: 1px solid var(--border); color: var(--primary); }
+      .preview-box label { display: block; background: var(--bg-light); padding: 12px; font-weight: 800; font-size: 0.75rem; text-transform: uppercase; text-align: center; border-bottom: 1px solid var(--border); color: var(--primary); }
       
-      .img-container { height: 220px; display: flex; align-items: center; justify-content: center; padding: 15px; background: white; }
-      .img-container img { max-width: 100%; max-height: 100%; object-fit: contain; } /* FIX: Peta Utuh */
+      .img-container { height: 220px; display: flex; align-items: center; justify-content: center; padding: 15px; }
+      .img-container img { max-width: 100%; max-height: 100%; object-fit: contain; }
 
-      /* Download Button Style */
+      /* Button Style */
       .btn-download-gis {
         background: var(--primary);
         color: white !important;
@@ -103,10 +102,14 @@
           <div class="nav-item"><a href="../../publikasi/publikasi.html">Publikasi</a></div>
           <div class="nav-item"><a href="../aset-digital.html" class="active">Aset Digital</a></div>
           <div class="nav-item"><a href="../../tentang/tentang.html">Tentang</a></div>
-          <div class="nav-item nav-item-cta"><a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a></div>
+
+          <div class="nav-item nav-item-cta">
+            <a href="../../kontak/kontak.html" class="nav-link-cta">Kontak</a>
+          </div>
         </nav>
 
         <div class="nav-actions"></div>
+
         <button class="nav-toggle" id="nav-toggle" aria-label="Buka Menu">
           <span></span><span></span><span></span>
         </button>
@@ -118,8 +121,8 @@
         <div class="container">
           <a href="../aset-digital.html" style="background: var(--primary); color: white; padding: 10px 20px; border-radius: 10px; text-decoration: none; font-weight: 800; display: inline-block; margin-bottom: 30px;">← Kembali ke Aset Digital</a>
           <h1 style="font-size: 3.2rem; font-weight: 800; color: var(--primary)">Dataset Batas Administrasi</h1>
-          <p style="font-size: 1.25rem; color: var(--text-muted); max-width: 850px; margin: 20px auto 0;">
-            Akses data spasial poligon resmi bersumber dari <strong>BIG TASWIL 2024</strong>. Data telah divalidasi topologi untuk menjamin kualitas analisis geospasial Anda.
+          <p style="font-size: 1.25rem; color: var(--text-muted); max-width: 850px; margin: 25px auto 0;">
+            Akses data spasial resmi berbasis <strong>BIG TASWIL 2024</strong>. Meskipun bersifat indikatif, data ini merupakan acuan vital untuk analisis kewilayahan nasional.
           </p>
         </div>
       </section>
@@ -130,12 +133,12 @@
           <div class="level-section">
             <h3>1. Batas Wilayah Provinsi</h3>
             <p class="narrative-text">
-              Dataset ini mencakup batas wilayah administratif tingkat pertama di seluruh Indonesia. Data merujuk pada metadata <strong>Batas Wilayah (TASWIL)</strong> dengan SRS ID berupa <strong>SRGI 2013</strong>. 
+              Dataset ini mencakup batas wilayah administratif tingkat pertama di seluruh Indonesia. Data ini dikembangkan melalui Pusat Pemetaan Batas Wilayah (PPBW) BIG melalui skema perjanjian Kerja Sama daerah. 
               Sangat direkomendasikan untuk pemetaan skala nasional dan analisis makro antar provinsi.
             </p>
             <div class="dual-preview">
               <div class="preview-box"><label>Pratinjau Peta</label><div class="img-container"><img src="../images/prov-peta-adm.png" alt="Peta Provinsi" /></div></div>
-              <div class="preview-box"><label>Struktur Atribut SHP</label><div class="img-container"><img src="../images/prov-atribut-peta.png" alt="Atribut Provinsi" /></div></div>
+              <div class="preview-box"><label>Atribut Data (.shp)</label><div class="img-container"><img src="../images/prov-atribut-peta.png" alt="Atribut Provinsi" /></div></div>
             </div>
             <a href="https://drive.google.com/file/d/1i-7YiqaVlBJ_f8crLmXo6fmJYfaH5dvV/view" target="_blank" class="btn-download-gis">Unduh SHP Provinsi (.shp)</a>
           </div>
@@ -145,12 +148,12 @@
           <div class="level-section">
             <h3>2. Batas Wilayah Kabupaten & Kota</h3>
             <p class="narrative-text">
-              Data ini dihasilkan melalui proses <i>Geoprocessing Dissolve</i> dari batas desa untuk menghasilkan unit administratif tingkat II. 
-              Sifat data saat ini masih <strong>indikatif (sementara)</strong>, mengacu pada kenampakan alami dan buatan sebagai batas pemetaan awal untuk kebutuhan survei komparasi.
+              Data ini merupakan bagian dari dataset TASWIL terbaru dengan sistem referensi <strong>SRGI 2013</strong>. 
+              Garis batas kabupaten ini dihasilkan melalui pemrosesan <i>Dissolve</i> batas desa untuk mempermudah visualisasi tanpa membebani performa perangkat lunak GIS Anda.
             </p>
             <div class="dual-preview">
               <div class="preview-box"><label>Pratinjau Peta</label><div class="img-container"><img src="../images/kab-peta-adm.png" alt="Peta Kabupaten" /></div></div>
-              <div class="preview-box"><label>Struktur Atribut SHP</label><div class="img-container"><img src="../images/kab-atribut-peta.png" alt="Atribut Kabupaten" /></div></div>
+              <div class="preview-box"><label>Atribut Data (.shp)</label><div class="img-container"><img src="../images/kab-atribut-peta.png" alt="Atribut Kabupaten" /></div></div>
             </div>
             <a href="https://drive.google.com/file/d/16bf1SimNf_kIO3qNzaDMwYJNL3foWgj9/view" target="_blank" class="btn-download-gis">Unduh SHP Kabupaten/Kota (.shp)</a>
           </div>
@@ -160,12 +163,12 @@
           <div class="level-section">
             <h3>3. Batas Wilayah Kecamatan</h3>
             <p class="narrative-text">
-              Dataset tingkat kecamatan menyediakan detail poligon yang bersih dari <i>overlap</i> antar wilayah. 
-              Data dikembangkan melalui integrasi Pusat Pemetaan Batas Wilayah (PPBW) BIG dan diperbarui sesuai standar <strong>Update Data Tahun 2024</strong> untuk kebutuhan perencanaan teknis daerah.
+              Dataset tingkat kecamatan menyediakan detail poligon yang telah melalui proses validasi topologi (clean). 
+              Sifat batas wilayah ini bersifat indikatif namun esensial digunakan sebagai pembanding saat survei langsung ke lapangan untuk menghindari potensi sengketa wilayah.
             </p>
             <div class="dual-preview">
               <div class="preview-box"><label>Pratinjau Peta</label><div class="img-container"><img src="../images/kec-peta-adm.png" alt="Peta Kecamatan" /></div></div>
-              <div class="preview-box"><label>Struktur Atribut SHP</label><div class="img-container"><img src="../images/kec-atribut-peta.png" alt="Atribut Kecamatan" /></div></div>
+              <div class="preview-box"><label>Atribut Data (.shp)</label><div class="img-container"><img src="../images/kec-atribut-peta.png" alt="Atribut Kecamatan" /></div></div>
             </div>
             <a href="https://drive.google.com/file/d/1xQkTCOEvGKNbRsxfCzC1EjvTgnKDfLYK/view" target="_blank" class="btn-download-gis">Unduh SHP Kecamatan (.shp)</a>
           </div>
@@ -175,12 +178,12 @@
           <div class="level-section">
             <h3>4. Batas Wilayah Desa & Kelurahan</h3>
             <p class="narrative-text">
-              Dataset dengan tingkat kedetailan tertinggi, mengintegrasikan data batas wilayah administrasi desa dari <strong>Peta Rupa Bumi Indonesia (RBI)</strong>. 
-              Mencakup tabel atribut lengkap seperti Kode Dagri dan Nama Wilayah untuk pemetaan partisipatif dan pemberdayaan ekonomi desa.
+              Merupakan tingkat kedetailan tertinggi yang bersumber dari <strong>Peta Rupa Bumi Indonesia (RBI) - Update 2024</strong>. 
+              Mencakup tabel atribut lengkap seperti Kode Dagri dan Nama Wilayah, siap digunakan untuk analisis pemberdayaan ekonomi lokal berbasis spasial.
             </p>
             <div class="dual-preview">
               <div class="preview-box"><label>Pratinjau Peta</label><div class="img-container"><img src="../images/desa-peta-adm.png" alt="Peta Desa" /></div></div>
-              <div class="preview-box"><label>Struktur Atribut SHP</label><div class="img-container"><img src="../images/desa-atribut-peta.png" alt="Atribut Desa" /></div></div>
+              <div class="preview-box"><label>Atribut Data (.shp)</label><div class="img-container"><img src="../images/desa-atribut-peta.png" alt="Atribut Desa" /></div></div>
             </div>
             <a href="https://drive.google.com/file/d/19rQnH1lu9fHzyXAnZifKcLA1hB2RzDKx/view" target="_blank" class="btn-download-gis">Unduh SHP Desa/Kelurahan (.shp)</a>
           </div>
@@ -188,7 +191,7 @@
           <div style="background: var(--bg-light); border: 2px dashed var(--border); border-radius: 24px; padding: 40px; margin-top: 20px; text-align: center;">
             <p style="font-size: 0.85rem; color: var(--text-muted); line-height: 1.6;">
               <strong>Spesifikasi Teknis:</strong><br>
-              Proyeksi: WGS 84 (EPSG:4326) | SRS: SRGI 2013 | Sumber: BIG – TASWIL 2024 | Status: Topologi Clean
+              Proyeksi: WGS 84 (EPSG:4326) | Metadata: BIG TASWIL 2024 | Format: Shapefile (.shp)
             </p>
           </div>
 
